[PHOENIX-3716] Search feature for menu item issue fixed when page overflows

--- a/egov/egov-egiweb/src/main/webapp/resources/global/css/egov/custom.less
+++ b/egov/egov-egiweb/src/main/webapp/resources/global/css/egov/custom.less
@@ -184,6 +184,7 @@ b, label, strong{
 
 .add-border {
     border-bottom: 1px solid #ebebeb;
+    padding:5px 0;
 }
 
 .add-padding{
@@ -192,6 +193,7 @@ b, label, strong{
 
 .add-border:last-child {
     border-bottom: none;
+    padding-bottom:0;
 }
 
 .view-content {
@@ -268,7 +270,7 @@ b, label, strong{
     padding-top: 62px;
     
     .search{
-    	position:absolute;
+    	position:fixed;
     	top:63px;
     	left:0;
     	z-index:10;
@@ -308,8 +310,8 @@ b, label, strong{
     }
     
     .search_list{
-    	position:absolute;
-    	top:112px;
+    	position:fixed;
+    	top:114px;
     	left:0;
     	z-index:9;
     	background:@basecolor;
@@ -532,7 +534,7 @@ b, label, strong{
         font-weight: normal;
         font-family: regular;
         .font-size(18px);
-        height: 18px;
+        height: 20px;
 		overflow: hidden;
     }
     
